--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Build Firmware
 on:
   push:
     branches: [ main ]
-
+  workflow_dispatch:   # 添加这一行以支持手动触发
 jobs:
   build:
     runs-on: ubuntu-latest
